730d757d219b45930b9a3293f38e55ca0b36fbb1 Fix: Button alignment issues in Bulma, Foundation and Fomantic
Sync to source repo @730d757d219b45930b9a3293f38e55ca0b36fbb1

--- a/css/buttons.bulma.css
+++ b/css/buttons.bulma.css
@@ -379,6 +379,7 @@ div.dt-button-background {
 }
 div.dt-buttons.field.is-grouped {
   display: block;
+  margin-bottom: 0;
 }
 div.dt-buttons.field.is-grouped button.button.processing,
 div.dt-buttons.field.is-grouped div.button.processing,
